prepare maven release workflow